# oxanus

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.v2.md  conductor.json  dump.rdb
.github/workflows/: test.yml
oxana/: Cargo.toml  README.md
oxana-macros/: Cargo.toml
oxana-web/: Cargo.toml
oxana-web/src/: handlers.rs  lib.rs  templates.rs
oxana-web/templates/: busy.html  dashboard.html  metrics.html  queue_detail.html  queues.html
oxana/examples/: dynamic_concurrency.rs
oxana/src/: coordinator.rs  dispatcher.rs  launcher.rs  storage.rs  storage_internal.rs
oxanus/: Cargo.toml  README.md
oxanus-macros/: Cargo.toml
oxanus-macros/src/: batch_processor.rs  job.rs  lib.rs  queue.rs  registry.rs  worker.rs
oxanus-web/: Cargo.toml
oxanus-web/examples/: web.rs
oxanus-web/src/: error.rs  filters.rs  handlers.rs  lib.rs  templates.rs
oxanus-web/templates/: _tabs.html  busy.html  cron.html  dashboard.html  global_jobs.html  metric_detail.html  metrics.html  on_demand.html  queue_detail.html  queues.html
oxanus/benches/: concurrency.rs
oxanus/examples/: batch.rs  cron.rs  cron_multiple.rs  cron_w_err.rs  dynamic.rs  experiment.rs  foo.rs  minimal.rs  resumable.rs  scheduled.rs  throttled.rs  unique.rs
oxanus/src/: batch_processor.rs  config.rs  coordinator.rs  dispatcher.rs  drainer.rs  executor.rs  job_envelope.rs  launcher.rs  lib.rs  metrics.rs  prometheus.rs  queue.rs  registry.rs  result_collector.rs  semaphores_map.rs  stats.rs  storage.rs  storage_keys.rs  (+7 more)
scripts/: bench.sh  workspace-archive.sh  workspace-setup.sh
(+21 files in other folders)
